# point-cloud-galaxy-diffusion

./: .gitignore  LICENSE  README.md  datasets.py  environment.yaml  eval.py  infer.py  setup.cfg  train.py  train_discriminative.py
configs/: jets.py  nbody.py  nbody_discriminative.py  nbody_sid.py
cosmo_utils/: knn.py
inference/: infer.py  inference_utils.py  likelihood.py
models/: attention.py  chebconv.py  diffusion.py  diffusion_utils.py  discriminative.py  dynamic_edge_conv.py  egnn-jax.py  egnn.py  egnn_jax.py  equivariant_batchnorm.py  equivariant_gnn.py  equivariant_transformer.py  gnn.py  graph_utils.py  likelihood.py  mlp.py  nequip.py  periodic_boundary_utils.py  scores.py  train_utils.py  transformer.py  transformer_adanorm.py
notebooks/: 01_likelihoods.ipynb  02_likelihood_variation.ipynb  02_likelihoods_vels.ipynb  03_viz_vel.ipynb  04_viz_pos.ipynb  05_parameter_variations.ipynb  06_fiducial_parameters.ipynb  07_likelihood_variation.ipynb  07_loss_KL.ipynb  SimpleDiffusionColab.ipynb  SimpleDiffusionColab_working.ipynb  Untitled.ipynb  debugging_likelihoods.ipynb  debugging_likelihoods_discriminative.ipynb  debugging_noise_scales.ipynb  diffusion_simple.ipynb  diffusion_transformer.ipynb  earthy_tests.ipynb  egnn-satorras.ipynb  egnn_satorras-Copy1.ipynb  egnn_satorras-vdm.ipynb  egnn_satorras.ipynb  evidence.ipynb  example-jets-cluster.ipynb  example-jets-graph.ipynb  example-jets-minimal.ipynb  example-jets.ipynb  example-mnist.ipynb  example-nbody-animations.ipynb  example-nbody-cluster.ipynb  example-nbody.ipynb  example.ipynb  graphs.ipynb  (+18 more)
(+36 files in other folders)
