[metadata]
name = set_diffuser 
version = 0.0.0
description =  transformer-guided variational diffusion model for class- and context-conditional generative modeling of and inference on set data.
[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    pandas
    pathlib
    jax
    flax
    optax
    e3nn-jax
    ml_collections
    clu
    wandb
    tqdm
    tensorflow
    tensorflow_probability
    
